Resolved layout bug on Firefox

--- a/src/styles/Results.module.css
+++ b/src/styles/Results.module.css
@@ -91,6 +91,7 @@
     border-radius: 5px;
     border: 1px solid #ced4da;
     cursor: pointer;
+    width: 45px !important;
 }
 
 .paginationWrapper {
@@ -136,4 +137,5 @@
     border-radius: 5px;
     border: 1px solid #ced4da;
     cursor: pointer;
+    width: 45px !important;
 }
